<resources>
    <string name="app_name" translatable="false">Jawwna</string>
    <string name="welcome_text" translatable="false">Welcome to Jawwna</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>


    <string name="location_selection" translatable="false">Location Selection</string>
    <string name="temperature_units" translatable="false">Temperature Units</string>
    <string name="wind_speed_units" translatable="false">Wind Speed Units</string>
    <string name="app_language" translatable="false">App Language</string>
    <string name="theme_selection" translatable="false">Theme Selection</string>
    <string name="notifications" translatable="false">Notifications</string>
    <string name="gps" translatable="false">GPS</string>
    <string name="map" translatable="false">Map</string>
    <string name="kelvin">Kelvin</string>
    <string name="celsius">Celsius</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="meter_per_second">Meter/Second</string>
    <string name="miles_per_hour">Miles/Hour</string>
    <string name="arabic">Arabic</string>
    <string name="english">English</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="enable">Enable</string>
    <string name="disable">Disable</string>
    <string name="save">Save</string>
    <string name="resetting">Resetting</string>
    <string name="save_location">Save Location</string>
    <string name="_12_00_pm">12:00 PM</string>
    <string name="_25_c">25°C</string>
    <string name="current_date">Sat,21 Sep\n</string>
    <string name="current_time">10:45 PM</string>
    <string name="giza">Giza</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="cloudy">Cloudy</string>
    <string name="weather_information">Weather Information</string>
    <string name="humidity_value">70%</string>
    <string name="wind_speed_value">10 km/h</string>
    <string name="pressure_value">1013 hPa</string>
    <string name="clouds_value">50%</string>
    <string name="humidity">Humidity</string>
    <string name="clouds">Clouds</string>
    <string name="pressure">Pressure</string>
    <string name="wind">Wind</string>
    <string name="fab_add">Add Item</string>
    <string name="home">Home</string>
    <string name="setting">Setting</string>
    <string name="favorite">Favorite</string>
    <string name="delete_favorite">Delete Favorite</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="alert_message">Alert Message</string>
    <string name="popup_message">Popup Message</string>
    <string name="dismiss">Dismiss</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="settings_reset">Settings reset</string>
    <string name="settings_saved" translatable="false">Settings saved</string>
    <string name="location_saved" translatable="false">Location saved: %1$s</string>
    <string name="item_deleted" translatable="false">Item deleted</string>
    <string name="restart_required" translatable="false">Restart Required</string>
    <string name="the_language_has_been_updated_please_restart_the_app_for_the_changes_to_take_effect" translatable="false">The language has been updated. Please restart the app for the changes to take effect.</string>
    <string name="language_will_change_later" translatable="false">language will change later</string>

    <string name="temperature_format">%.0f%s</string>
    <string name="temperature_format_daily_forecast">Max: %.0f%s\nMin: %.0f%s</string>

    <string name="wind_speed_format">%.0f%s</string>
    <string name="cityName">%s</string>
    <string name="wather_description">%d</string>

    <string name="image_weather">Image Weather</string>
    <string name="search_for_a_location">Search for a location</string>
    <string name="error">Error</string>
    <string name="no_internet_connection">No Internet Connection!</string>
    <string name="connected_to_the_internet">Connected to the Internet!</string>
    <string name="open_network">Open Network</string>
    <string name="open_wifi">Open Wifi</string>
    <string name="open_data">Open Data</string>
    <string name="do_you_want_to_open_network_settings">Do you want to open network settings?</string>

    <string name="location_permission_required_title">Location Permission Required</string>
    <string name="location_permission_required_message">This app requires location permission to function properly. Please enable location access in the app settings.</string>
    <string name="settings">Settings</string>


    <!-- New strings for location dialog -->
    <string name="location_dialog_title">Location is not available</string>
    <string name="location_dialog_message">Choose your location from map or GPS</string>
    <string name="failed_to_retrieve_your_current_location_please_check_your_network_connection_or_select_a_location_from_the_map_manually">" Failed to retrieve your current location. Please check your network connection or select a location from the map manually"</string>
    <string name="warning">Warning</string>
    <string name="check_network">Check Network</string>
    <string name="current_weather">Current Weather</string>
    <string name="favorite_weather">Favorite Weather</string>
    <string name="notification">Notification</string>
    <string name="alarm">Alarm</string>
    <string name="select_date">Select Date</string>
    <string name="select_time">Select Time</string>
    <string name="add_alarm">Add Alarm</string>
    <string name="delete_alarm">Delete Alarm</string>
    <string name="please_select_both_date_and_time">Please select both date and time</string>
    <string name="alarm_saved">Alarm saved!</string>
    <string name="invalid_date">Invalid date</string>
    <string name="item_clicked">Item clicked: %1$s</string>
    <string name="min_20_c_max_30_c">Min: 20°C, Max: 30°C</string>
    <string name="weather_icon">Weather Icon</string>
    <string name="you_cannot_select_a_past_time">You cannot select a past time.</string>
    <string name="alarm_cancelled">Alarm Cancelled</string>
    <string name="alarm_reminder">Alarm Reminder</string>
    <string name="reminder_for_at">Reminder for %1$s at %2$s %3$s</string>

</resources>