<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Background video -->
    <VideoView
        android:id="@+id/background_video"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"/>

    <!-- Scrollable settings -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_marginTop="25dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="13dp"
            android:layout_marginRight="13dp">

            <!-- Location Selection Card -->
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                app:cardCornerRadius="25dp"
                android:elevation="100dp"
                android:backgroundTint="@android:color/transparent">

                <LinearLayout
                    android:id="@+id/locationBackground"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@drawable/card_settings_field_background_light_mode"
                    android:padding="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/location_selection"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <RadioGroup
                        android:id="@+id/radio_group_location"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <RadioButton
                            android:id="@+id/radio_gps"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/gps" />

                        <RadioButton
                            android:id="@+id/radio_map"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/map" />
                    </RadioGroup>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!-- Temperature Units Card -->
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/transparent"
                app:cardCornerRadius="25dp"
                android:elevation="100dp"
                android:layout_marginBottom="16dp">

                <LinearLayout
                    android:id="@+id/temperatureBackground"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@drawable/card_settings_field_background_light_mode"
                    android:padding="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/temperature_units"
                        android:textStyle="bold"
                        android:textSize="18sp"/>

                    <RadioGroup
                        android:id="@+id/radio_group_temperature"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <RadioButton
                            android:id="@+id/radio_kelvin"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/kelvin"/>

                        <RadioButton
                            android:id="@+id/radio_celsius"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/celsius"/>

                        <RadioButton
                            android:id="@+id/radio_fahrenheit"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/fahrenheit"/>
                    </RadioGroup>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!-- Wind Speed Units Card -->
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="25dp"
                android:elevation="100dp"
                android:backgroundTint="@android:color/transparent"
                android:layout_marginBottom="16dp">

                <LinearLayout
                    android:id="@+id/windSpeedBackground"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@drawable/card_settings_field_background_light_mode"
                    android:padding="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/wind_speed_units"
                        android:textStyle="bold"
                        android:textSize="18sp"/>

                    <RadioGroup
                        android:id="@+id/radio_group_wind_speed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <RadioButton
                            android:id="@+id/radio_meter_per_sec"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/meter_per_second"/>

                        <RadioButton
                            android:id="@+id/radio_miles_per_hour"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/miles_per_hour"/>
                    </RadioGroup>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!-- App Language Card -->
            <androidx.cardview.widget.CardView
                app:cardCornerRadius="25dp"
                android:elevation="100dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/transparent"
                android:layout_marginBottom="16dp">

                <LinearLayout
                    android:id="@+id/languageBackground"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@drawable/card_settings_field_background_light_mode"
                    android:padding="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/app_language"
                        android:textStyle="bold"
                        android:textSize="18sp"/>

                    <RadioGroup
                        android:id="@+id/radio_group_language"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <RadioButton
                            android:id="@+id/radio_arabic"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/arabic"/>

                        <RadioButton
                            android:id="@+id/radio_english"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/english"/>
                    </RadioGroup>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!-- Theme Selection Card -->
            <androidx.cardview.widget.CardView
                app:cardCornerRadius="25dp"
                android:elevation="100dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/transparent"
                android:layout_marginBottom="16dp">

                <LinearLayout
                    android:id="@+id/themeBackground"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@drawable/card_settings_field_background_light_mode"
                    android:padding="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/theme_selection"
                        android:textStyle="bold"
                        android:textSize="18sp"/>

                    <RadioGroup
                        android:id="@+id/radio_group_theme"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <RadioButton
                            android:id="@+id/radio_light"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/light"/>

                        <RadioButton
                            android:id="@+id/radio_dark"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/dark"/>
                    </RadioGroup>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!-- Notifications Card -->
            <androidx.cardview.widget.CardView
                app:cardCornerRadius="25dp"
                android:elevation="100dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/transparent"
                android:layout_marginBottom="16dp">

                <LinearLayout
                    android:id="@+id/notificationsBackground"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@drawable/card_settings_field_background_light_mode"
                    android:padding="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/notifications"
                        android:textStyle="bold"
                        android:textSize="18sp"/>

                    <RadioGroup
                        android:id="@+id/notification_group_theme"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <RadioButton
                            android:id="@+id/radio_enable"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/enable"/>

                        <RadioButton
                            android:id="@+id/radio_disable"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/disable"/>
                    </RadioGroup>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/savebut"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:background="@drawable/card_settings_field_background_light_mode"
                android:text="@string/save" />

            <Button
                android:id="@+id/resettingbut"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:background="@drawable/card_settings_field_background_light_mode"
                android:text="@string/resetting" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
